Update get plate measurements api